// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsedTime Filter date 1`] = `
<div>
  <div
    class="usedTime"
  >
    <div
      class="menu"
    >
      <nav
        id="nav"
        role="navigation"
      >
        <ul>
          <li>
            <a
              class=""
              href="/?fromDate_=&toDate_="
            >
              Anlysis
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              class="active"
              href="/used_time?page=1&sort=&search=&date=&type="
            >
              Used time
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class=" padding-title"
    >
      <div
        class="filter"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <input
              class="filter-input"
              data-testid="input-name-used"
              placeholder="Search"
              value=""
            />
          </div>
          <div
            class="col"
          >
            <div
              class="d-flex input-date"
            >
              <input
                data-testid="input-date-used"
                name="trip-start"
                type="date"
                value=""
              />
            </div>
          </div>
          <div
            class="col"
          >
            <select
              aria-label="Default select example"
              class="form-select"
              data-testid="select-box-used"
            >
              <option>
                Please select
              </option>
              <option
                value="Android"
              >
                Android
              </option>
              <option
                value="iOS"
              >
                iOS
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="usedTime-container"
      >
        <table
          class="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th>
                UserName
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-up "
                  data-icon="arrow-up"
                  data-prefix="fas"
                  data-testid="arrow-circle-up"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M374.6 246.6C368.4 252.9 360.2 256 352 256s-16.38-3.125-22.62-9.375L224 141.3V448c0 17.69-14.33 31.1-31.1 31.1S160 465.7 160 448V141.3L54.63 246.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160C387.1 213.9 387.1 234.1 374.6 246.6z"
                    fill="currentColor"
                  />
                </svg>
              </th>
              <th>
                OS Name
              </th>
              <th>
                Date
              </th>
              <th>
                Total
              </th>
              <th>
                Facebook
              </th>
              <th>
                Youtube
              </th>
              <th>
                Other
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              style="height: 80px;"
            >
              <td>
                g5zxl
              </td>
              <td>
                Android
              </td>
              <td>
                2017-04-13
              </td>
              <td>
                7
              </td>
              <td>
                6
              </td>
              <td>
                8
              </td>
              <td>
                7
              </td>
            </tr>
            <tr
              style="height: 80px;"
            >
              <td>
                pqjx1
              </td>
              <td>
                iOS
              </td>
              <td>
                2016-04-03
              </td>
              <td>
                11
              </td>
              <td>
                7
              </td>
              <td>
                9
              </td>
              <td>
                18
              </td>
            </tr>
          </tbody>
          <tfoot>
            <tr>
              <td
                colspan="7"
              >
                <div
                  class="usedTime-container-pagination"
                >
                  
                  <nav
                    aria-label="Countries Pagination"
                  >
                    <ul
                      class="pagination"
                    >
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=1&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="1"
                            href="#"
                          >
                            1
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item active"
                      >
                        <a
                          href="/used_time?page=2&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="2"
                            href="#"
                          >
                            2
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=3&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="3"
                            href="#"
                          >
                            3
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=4&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="4"
                            href="#"
                          >
                            4
                          </a>
                        </a>
                      </li>
                    </ul>
                  </nav>
                </div>
              </td>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`UsedTime Filter search 1`] = `
<div>
  <div
    class="usedTime"
  >
    <div
      class="menu"
    >
      <nav
        id="nav"
        role="navigation"
      >
        <ul>
          <li>
            <a
              class=""
              href="/?fromDate_=&toDate_="
            >
              Anlysis
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              class="active"
              href="/used_time?page=1&sort=&search=&date=&type="
            >
              Used time
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class=" padding-title"
    >
      <div
        class="filter"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <input
              class="filter-input"
              data-testid="input-name-used"
              placeholder="Search"
              value=""
            />
          </div>
          <div
            class="col"
          >
            <div
              class="d-flex input-date"
            >
              <input
                data-testid="input-date-used"
                name="trip-start"
                type="date"
                value=""
              />
            </div>
          </div>
          <div
            class="col"
          >
            <select
              aria-label="Default select example"
              class="form-select"
              data-testid="select-box-used"
            >
              <option>
                Please select
              </option>
              <option
                value="Android"
              >
                Android
              </option>
              <option
                value="iOS"
              >
                iOS
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="usedTime-container"
      >
        <table
          class="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th>
                UserName
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-up "
                  data-icon="arrow-up"
                  data-prefix="fas"
                  data-testid="arrow-circle-up"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M374.6 246.6C368.4 252.9 360.2 256 352 256s-16.38-3.125-22.62-9.375L224 141.3V448c0 17.69-14.33 31.1-31.1 31.1S160 465.7 160 448V141.3L54.63 246.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160C387.1 213.9 387.1 234.1 374.6 246.6z"
                    fill="currentColor"
                  />
                </svg>
              </th>
              <th>
                OS Name
              </th>
              <th>
                Date
              </th>
              <th>
                Total
              </th>
              <th>
                Facebook
              </th>
              <th>
                Youtube
              </th>
              <th>
                Other
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              style="height: 80px;"
            >
              <td>
                g5zxl
              </td>
              <td>
                Android
              </td>
              <td>
                2017-04-13
              </td>
              <td>
                7
              </td>
              <td>
                6
              </td>
              <td>
                8
              </td>
              <td>
                7
              </td>
            </tr>
            <tr
              style="height: 80px;"
            >
              <td>
                pqjx1
              </td>
              <td>
                iOS
              </td>
              <td>
                2016-04-03
              </td>
              <td>
                11
              </td>
              <td>
                7
              </td>
              <td>
                9
              </td>
              <td>
                18
              </td>
            </tr>
          </tbody>
          <tfoot>
            <tr>
              <td
                colspan="7"
              >
                <div
                  class="usedTime-container-pagination"
                >
                  
                  <nav
                    aria-label="Countries Pagination"
                  >
                    <ul
                      class="pagination"
                    >
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=1&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="1"
                            href="#"
                          >
                            1
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item active"
                      >
                        <a
                          href="/used_time?page=2&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="2"
                            href="#"
                          >
                            2
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=3&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="3"
                            href="#"
                          >
                            3
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=4&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="4"
                            href="#"
                          >
                            4
                          </a>
                        </a>
                      </li>
                    </ul>
                  </nav>
                </div>
              </td>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`UsedTime Filter select type 1`] = `
<div>
  <div
    class="usedTime"
  >
    <div
      class="menu"
    >
      <nav
        id="nav"
        role="navigation"
      >
        <ul>
          <li>
            <a
              class=""
              href="/?fromDate_=&toDate_="
            >
              Anlysis
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              class="active"
              href="/used_time?page=1&sort=&search=&date=&type="
            >
              Used time
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class=" padding-title"
    >
      <div
        class="filter"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <input
              class="filter-input"
              data-testid="input-name-used"
              placeholder="Search"
              value=""
            />
          </div>
          <div
            class="col"
          >
            <div
              class="d-flex input-date"
            >
              <input
                data-testid="input-date-used"
                name="trip-start"
                type="date"
                value=""
              />
            </div>
          </div>
          <div
            class="col"
          >
            <select
              aria-label="Default select example"
              class="form-select"
              data-testid="select-box-used"
            >
              <option>
                Please select
              </option>
              <option
                value="Android"
              >
                Android
              </option>
              <option
                value="iOS"
              >
                iOS
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="usedTime-container"
      >
        <table
          class="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th>
                UserName
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-up "
                  data-icon="arrow-up"
                  data-prefix="fas"
                  data-testid="arrow-circle-up"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M374.6 246.6C368.4 252.9 360.2 256 352 256s-16.38-3.125-22.62-9.375L224 141.3V448c0 17.69-14.33 31.1-31.1 31.1S160 465.7 160 448V141.3L54.63 246.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160C387.1 213.9 387.1 234.1 374.6 246.6z"
                    fill="currentColor"
                  />
                </svg>
              </th>
              <th>
                OS Name
              </th>
              <th>
                Date
              </th>
              <th>
                Total
              </th>
              <th>
                Facebook
              </th>
              <th>
                Youtube
              </th>
              <th>
                Other
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              style="height: 80px;"
            >
              <td>
                g5zxl
              </td>
              <td>
                Android
              </td>
              <td>
                2017-04-13
              </td>
              <td>
                7
              </td>
              <td>
                6
              </td>
              <td>
                8
              </td>
              <td>
                7
              </td>
            </tr>
            <tr
              style="height: 80px;"
            >
              <td>
                pqjx1
              </td>
              <td>
                iOS
              </td>
              <td>
                2016-04-03
              </td>
              <td>
                11
              </td>
              <td>
                7
              </td>
              <td>
                9
              </td>
              <td>
                18
              </td>
            </tr>
          </tbody>
          <tfoot>
            <tr>
              <td
                colspan="7"
              >
                <div
                  class="usedTime-container-pagination"
                >
                  
                  <nav
                    aria-label="Countries Pagination"
                  >
                    <ul
                      class="pagination"
                    >
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=1&sort=&search=&date=&type=Please select"
                        >
                          <a
                            class="page-link"
                            data-testid="1"
                            href="#"
                          >
                            1
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item active"
                      >
                        <a
                          href="/used_time?page=2&sort=&search=&date=&type=Please select"
                        >
                          <a
                            class="page-link"
                            data-testid="2"
                            href="#"
                          >
                            2
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=3&sort=&search=&date=&type=Please select"
                        >
                          <a
                            class="page-link"
                            data-testid="3"
                            href="#"
                          >
                            3
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=4&sort=&search=&date=&type=Please select"
                        >
                          <a
                            class="page-link"
                            data-testid="4"
                            href="#"
                          >
                            4
                          </a>
                        </a>
                      </li>
                    </ul>
                  </nav>
                </div>
              </td>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`UsedTime check loading 1`] = `
<div>
  <div
    class="usedTime"
  >
    <div
      class="menu"
    >
      <nav
        id="nav"
        role="navigation"
      >
        <ul>
          <li>
            <a
              aria-current="page"
              class="active"
              href="/?fromDate_=&toDate_="
            >
              Anlysis
            </a>
          </li>
          <li>
            <a
              class=""
              href="/used_time?page=1&sort=&search=&date=&type="
            >
              Used time
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class=" padding-title"
    >
      <div
        class="filter"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <input
              class="filter-input"
              data-testid="input-name-used"
              placeholder="Search"
              value=""
            />
          </div>
          <div
            class="col"
          >
            <div
              class="d-flex input-date"
            >
              <input
                data-testid="input-date-used"
                name="trip-start"
                type="date"
                value=""
              />
            </div>
          </div>
          <div
            class="col"
          >
            <select
              aria-label="Default select example"
              class="form-select"
              data-testid="select-box-used"
            >
              <option>
                Please select
              </option>
              <option
                value="Android"
              >
                Android
              </option>
              <option
                value="iOS"
              >
                iOS
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="usedTime-container"
      >
        <table
          class="table table-striped table-bordered table-hover"
          style="height: 500px;"
        >
          <thead>
            <tr>
              <th>
                UserName
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-up "
                  data-icon="arrow-up"
                  data-prefix="fas"
                  data-testid="arrow-circle-up"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M374.6 246.6C368.4 252.9 360.2 256 352 256s-16.38-3.125-22.62-9.375L224 141.3V448c0 17.69-14.33 31.1-31.1 31.1S160 465.7 160 448V141.3L54.63 246.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160C387.1 213.9 387.1 234.1 374.6 246.6z"
                    fill="currentColor"
                  />
                </svg>
              </th>
              <th>
                OS Name
              </th>
              <th>
                Date
              </th>
              <th>
                Total
              </th>
              <th>
                Facebook
              </th>
              <th>
                Youtube
              </th>
              <th>
                Other
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                colspan="7"
              >
                <div
                  class="loading"
                >
                  <div
                    class="spinner-border text-success"
                    data-testid="loading"
                  />
                </div>
              </td>
            </tr>
          </tbody>
          <tfoot>
            <tr>
              <td
                colspan="7"
              >
                <div
                  class="usedTime-container-pagination"
                >
                  
                  <nav
                    aria-label="Countries Pagination"
                  >
                    <ul
                      class="pagination"
                    >
                      <li
                        class="page-item active"
                      >
                        <a
                          href="/used_time?page=1&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="1"
                            href="#"
                          >
                            1
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=2&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="2"
                            href="#"
                          >
                            2
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=3&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="3"
                            href="#"
                          >
                            3
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=4&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="4"
                            href="#"
                          >
                            4
                          </a>
                        </a>
                      </li>
                    </ul>
                  </nav>
                </div>
              </td>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`UsedTime error task 1`] = `
<div>
  <div
    class="usedTime"
  >
    <div
      class="menu"
    >
      <nav
        id="nav"
        role="navigation"
      >
        <ul>
          <li>
            <a
              aria-current="page"
              class="active"
              href="/?fromDate_=&toDate_="
            >
              Anlysis
            </a>
          </li>
          <li>
            <a
              class=""
              href="/used_time?page=1&sort=&search=&date=&type="
            >
              Used time
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class=" padding-title"
    >
      <div
        class="filter"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <input
              class="filter-input"
              data-testid="input-name-used"
              placeholder="Search"
              value=""
            />
          </div>
          <div
            class="col"
          >
            <div
              class="d-flex input-date"
            >
              <input
                data-testid="input-date-used"
                name="trip-start"
                type="date"
                value=""
              />
            </div>
          </div>
          <div
            class="col"
          >
            <select
              aria-label="Default select example"
              class="form-select"
              data-testid="select-box-used"
            >
              <option>
                Please select
              </option>
              <option
                value="Android"
              >
                Android
              </option>
              <option
                value="iOS"
              >
                iOS
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="usedTime-container"
      >
        <table
          class="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th>
                UserName
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-up "
                  data-icon="arrow-up"
                  data-prefix="fas"
                  data-testid="arrow-circle-up"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M374.6 246.6C368.4 252.9 360.2 256 352 256s-16.38-3.125-22.62-9.375L224 141.3V448c0 17.69-14.33 31.1-31.1 31.1S160 465.7 160 448V141.3L54.63 246.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160C387.1 213.9 387.1 234.1 374.6 246.6z"
                    fill="currentColor"
                  />
                </svg>
              </th>
              <th>
                OS Name
              </th>
              <th>
                Date
              </th>
              <th>
                Total
              </th>
              <th>
                Facebook
              </th>
              <th>
                Youtube
              </th>
              <th>
                Other
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                colspan="7"
              >
                no data
              </td>
            </tr>
          </tbody>
          <tfoot>
            <tr>
              <td
                colspan="7"
              >
                <div
                  class="usedTime-container-pagination"
                >
                  
                  <nav
                    aria-label="Countries Pagination"
                  >
                    <ul
                      class="pagination"
                    >
                      <li
                        class="page-item active"
                      >
                        <a
                          href="/used_time?page=1&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="1"
                            href="#"
                          >
                            1
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=2&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="2"
                            href="#"
                          >
                            2
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=3&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="3"
                            href="#"
                          >
                            3
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=4&sort=&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="4"
                            href="#"
                          >
                            4
                          </a>
                        </a>
                      </li>
                    </ul>
                  </nav>
                </div>
              </td>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`UsedTime handle Click UsedTime 1`] = `
<div>
  <div
    class="usedTime"
  >
    <div
      class="menu"
    >
      <nav
        id="nav"
        role="navigation"
      >
        <ul>
          <li>
            <a
              class=""
              href="/?fromDate_=&toDate_="
            >
              Anlysis
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              class="active"
              href="/used_time?page=1&sort=&search=&date=&type="
            >
              Used time
            </a>
          </li>
        </ul>
      </nav>
    </div>
    <div
      class=" padding-title"
    >
      <div
        class="filter"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <input
              class="filter-input"
              data-testid="input-name-used"
              placeholder="Search"
              value=""
            />
          </div>
          <div
            class="col"
          >
            <div
              class="d-flex input-date"
            >
              <input
                data-testid="input-date-used"
                name="trip-start"
                type="date"
                value=""
              />
            </div>
          </div>
          <div
            class="col"
          >
            <select
              aria-label="Default select example"
              class="form-select"
              data-testid="select-box-used"
            >
              <option>
                Please select
              </option>
              <option
                value="Android"
              >
                Android
              </option>
              <option
                value="iOS"
              >
                iOS
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        class="usedTime-container"
      >
        <table
          class="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th>
                UserName
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-up "
                  data-icon="arrow-up"
                  data-prefix="fas"
                  data-testid="arrow-circle-up"
                  focusable="false"
                  role="img"
                  viewBox="0 0 384 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M374.6 246.6C368.4 252.9 360.2 256 352 256s-16.38-3.125-22.62-9.375L224 141.3V448c0 17.69-14.33 31.1-31.1 31.1S160 465.7 160 448V141.3L54.63 246.6c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160C387.1 213.9 387.1 234.1 374.6 246.6z"
                    fill="currentColor"
                  />
                </svg>
              </th>
              <th>
                OS Name
              </th>
              <th>
                Date
              </th>
              <th>
                Total
              </th>
              <th>
                Facebook
              </th>
              <th>
                Youtube
              </th>
              <th>
                Other
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              style="height: 80px;"
            >
              <td>
                g5zxl
              </td>
              <td>
                Android
              </td>
              <td>
                2017-04-13
              </td>
              <td>
                7
              </td>
              <td>
                6
              </td>
              <td>
                8
              </td>
              <td>
                7
              </td>
            </tr>
            <tr
              style="height: 80px;"
            >
              <td>
                pqjx1
              </td>
              <td>
                iOS
              </td>
              <td>
                2016-04-03
              </td>
              <td>
                11
              </td>
              <td>
                7
              </td>
              <td>
                9
              </td>
              <td>
                18
              </td>
            </tr>
          </tbody>
          <tfoot>
            <tr>
              <td
                colspan="7"
              >
                <div
                  class="usedTime-container-pagination"
                >
                  
                  <nav
                    aria-label="Countries Pagination"
                  >
                    <ul
                      class="pagination"
                    >
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=1&sort=asc&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="1"
                            href="#"
                          >
                            1
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item active"
                      >
                        <a
                          href="/used_time?page=2&sort=asc&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="2"
                            href="#"
                          >
                            2
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=3&sort=asc&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="3"
                            href="#"
                          >
                            3
                          </a>
                        </a>
                      </li>
                      <li
                        class="page-item"
                      >
                        <a
                          href="/used_time?page=4&sort=asc&search=&date=&type="
                        >
                          <a
                            class="page-link"
                            data-testid="4"
                            href="#"
                          >
                            4
                          </a>
                        </a>
                      </li>
                    </ul>
                  </nav>
                </div>
              </td>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
  </div>
</div>
`;
